[package]
name = "dante"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dante"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
regex = "1.7.0"
